<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9"
    android:orientation="horizontal"
    tools:context=".CalculatorFragment">

    <EditText
        android:id="@+id/units_input"
        android:layout_width="293dp"
        android:layout_height="102dp"
        android:layout_margin="8dp"
        android:background="#E3E3FF"
        android:hint="@string/Enter_units_used"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="279dp"
        android:layout_height="61dp"
        android:backgroundTint="#FF9300"
        android:text="@string/Clear"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#2EC3FF"
        android:text="@string/Calculate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rebate_input"
        android:layout_width="291dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:background="#E3E3FF"
        android:hint="@string/Enter_rebate"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/units_input"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:fontFamily="serif"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/units_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="#60000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>


