<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/units_used_text"
        android:layout_width="288dp"
        android:layout_height="29dp"
        android:fontFamily="monospace"
        android:text="@string/units_used_format"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/final_cost_text"
        android:layout_width="287dp"
        android:layout_height="25dp"
        android:fontFamily="monospace"
        android:text="@string/result_format"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rebate_percentage_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rebate_percentage_text"
        app:layout_constraintTop_toBottomOf="@+id/rebate_percentage_text"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/rebate_percentage_text"
        android:layout_width="288dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/rebate_percentage_format"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/units_used_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/units_used_text"
        app:layout_constraintTop_toBottomOf="@+id/units_used_text" />

    <TextView
        android:id="@+id/bill_detailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/bill_detailed"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <View
        android:layout_width="45mm"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />


    <TextView
        android:id="@+id/copyright"
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="#60000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>
